--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
 		rel="stylesheet">
+	<link rel="stylesheet" <link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20,300,0,0" />
 	<link rel="stylesheet" href="%sveltekit.assets%/reset.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
