--- a/src/app.html
+++ b/src/app.html
@@ -7,12 +7,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
-		href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+		href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,300..700;1,400..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" <link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20,300,0,0" />
 	<link rel="stylesheet" href="%sveltekit.assets%/reset.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>yerma.dev</title>
 	%sveltekit.head%
 </head>
 
